fixed dark mode on landing page

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
   --secondary: #dcfce7;
   --secondary-foreground: oklch(41.1% 0.14828 259.782);
 
-  --muted: oklch(92.191% 0.0001 271.152);
+  --muted: oklch(97.315% 0.00011 271.152);
   --muted-foreground: oklch(0.556 0 0);
 
   --stroke: #eef0f2;
